--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 
     </main>
     <!--main end-->
-    <footer>My CSTU Passport website with css</footer>
+    <footer><b2>Surabodee Phasuk</b2></footer>
 </body>
 </html>
