--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CSTU Passport website css</title>
-    <link rel="stylesheet" href="My CSTU Passport website css.css">
+    <link rel="stylesheet" href="css/My CSTU Passport website css.css">
 </head>
 <body>
     <!--header start-->
