--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             <p>Hobby</p>
             <li>Play game console</li>
             <h5>sample</h5>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/uHGShqcAHlQ?si=GJdKZ-2Rz299yxdM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
-        </div>
+            <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/bgqGdIoa52s?si=KdHLh5nXUgFRS5py" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <div>
 
             <p>Contact channels</p>
