--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             <p>Hobby</p>
             <li>Play game console</li>
             <h5>sample</h5>
-            <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/bgqGdIoa52s?si=KdHLh5nXUgFRS5py" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <div>
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bgqGdIoa52s?si=KdHLh5nXUgFRS5py" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>Contact channels</p>
             <img src="https://cdn.pixabay.com/photo/2016/08/09/17/52/instagram-1581266_960_720.jpg" width="125" height="125">
             <img src="https://img.freepik.com/premium-vector/blue-social-media-logo_197792-1759.jpg" width="125" height="125">
