--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--banner start-->
     <section class="banner">
         <div class="banner-info">
-            <img src="/Users/sprdee/Library/CloudStorage/OneDrive-ThammasatUniversity/cs100/test/52978.jpg" alt="Me" width="300" height="150">
+            <img src="image/52978.jpg" alt="Me" width="300" height="150">
             <p>Thammasat University student</p>
         </div>
 
@@ -40,7 +40,7 @@
             <li>Nickname:Might</li>
             <li>Age:18</li>
             <li>Student number:6609650707</li>
-            <video src="/Users/sprdee/Library/CloudStorage/OneDrive-ThammasatUniversity/cs100/test/present myself.mp4" width="200" height="250"controls></video>
+            <video src="VDO/present myself.mp4" width="200" height="250"controls></video>
         </div>
         <div>
             <p>Hobby</p>
