--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <!--nav start-->
     <nav>
         <ul class="menu">
-            <li><a href="#">Me</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">MY Advisor</a></li>
+            <li><a href="#">Home page</a></li>
+            <li><a href="#">My ativities</a></li>
         </ul>
     </nav>
     <!--nav end-->
