--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!--nav start-->
     <nav>
         <ul class="menu">
-            <li><a href="#">MY Advisor</a></li>
-            <li><a href="#">Home page</a></li>
+            <li><a href="html/myAdvisor.html">MY Advisor</a></li>
+            <li><a href="html/myActivities.html">Home page</a></li>
             <li><a href="#">My ativities</a></li>
         </ul>
     </nav>
