--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <nav>
         <ul class="menu">
             <li><a href="html/myAdvisor.html">MY Advisor</a></li>
-            <li><a href="html/myActivities.html">Home page</a></li>
-            <li><a href="#">My ativities</a></li>
+            <li><a href="#">Home page</a></li>
+            <li><a href="html/myActivities.html">My ativities</a></li>
         </ul>
     </nav>
     <!--nav end-->
