--- a/html/MyActivities.html
+++ b/html/MyActivities.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Activity</title>
-    <link rel="stylesheet" href="activity.css">
+    <link rel="stylesheet" href="../css/activity.css">
 </head>
 <body>
     <nav>
