--- a/html/MyActivities.html
+++ b/html/MyActivities.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
     <ul class="menu">
-        <li><a href="html/myAdvisor.html">MY Advisor</a></li>
+        <li><a href="myAdvisor.html">MY Advisor</a></li>
         <li><a href="../index.html">Home page</a></li>
-        <li><a href="html/myActivities.html">My ativities</a></li>
+        <li><a href="myActivities.html">My ativities</a></li>
     </ul>
     </nav>
 
