--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="menu">
             <li><a href="html/myAdvisor.html">MY Advisor</a></li>
             <li><a href="#">Home page</a></li>
-            <li><a href="html/myActivities.html">My activities</a></li>
+            <li><a href="html/MyActivities.html">My activities</a></li>
         </ul>
     </nav>
     <!--nav end-->
