--- a/html/MyActivities.html
+++ b/html/MyActivities.html
@@ -11,7 +11,7 @@
     <ul class="menu">
         <li><a href="myAdvisor.html">MY Advisor</a></li>
         <li><a href="../index.html">Home page</a></li>
-        <li><a href="myActivities.html">My activities</a></li>
+        <li><a href="MyActivities.html">My activities</a></li>
     </ul>
     </nav>
 
