--- a/html/MyActivities.html
+++ b/html/MyActivities.html
@@ -24,8 +24,8 @@
     
     <!--main start-->
     <main>
-        <img src="image/56666.jpg" height="300" width="200">
-        <video src="VDO/718966684.304635.mp4" height="" width=""controls></video>
+        <img src="../image/56666.jpg" height="300" width="200">
+        <video src="../VDO/718966684.304635.mp4" height="" width=""controls></video>
         
         <h3>Sunday 6 August 2023</h3>
     </main>
