--- a/html/Myadvisor.html
+++ b/html/Myadvisor.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Advisor</title>
-    <link rel="stylesheet" href="/Users/sprdee/Documents/Git/html/Myadvisor.css">
+    <link rel="stylesheet" href="../css/Myadvisor.css">
 </head>
 <body>
     <header>
         <ul class="menu">
-            <li><a href="html/myAdvisor.html">MY Advisor</a></li>
+            <li><a href="myAdvisor.html">MY Advisor</a></li>
             <li><a href="../index.html">Home page</a></li>
-            <li><a href="html/myActivities.html">My ativities</a></li>
+            <li><a href="myActivities.html">My ativities</a></li>
         </ul>
     </header>
     <main>
