--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--nav start-->
     <nav>
         <ul class="menu">
-            <li><a href="html/MyAdvisor.html">MY Advisor</a></li>
+            <li><a href="html/Myadvisor.html">MY Advisor</a></li>
             <li><a href="#">Home page</a></li>
             <li><a href="html/MyActivities.html">My activities</a></li>
         </ul>
