--- a/html/MyActivities.html
+++ b/html/MyActivities.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
     <ul class="menu">
-        <li><a href="myAdvisor.html">MY Advisor</a></li>
+        <li><a href="Myadvisor.html">MY Advisor</a></li>
         <li><a href="../index.html">Home page</a></li>
         <li><a href="MyActivities.html">My activities</a></li>
     </ul>
