--- a/html/Myadvisor.html
+++ b/html/Myadvisor.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <ul class="menu">
-            <li><a href="myAdvisor.html">MY Advisor</a></li>
+            <li><a href="Myadvisor.html">MY Advisor</a></li>
             <li><a href="../index.html">Home page</a></li>
             <li><a href="myActivities.html">My ativities</a></li>
         </ul>
