--- a/html/Myadvisor.html
+++ b/html/Myadvisor.html
@@ -11,7 +11,7 @@
         <ul class="menu">
             <li><a href="Myadvisor.html">MY Advisor</a></li>
             <li><a href="../index.html">Home page</a></li>
-            <li><a href="myActivities.html">My ativities</a></li>
+            <li><a href="MyActivities.html">My ativities</a></li>
         </ul>
     </header>
     <main>
